Tue Aug 24 02:26:25 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/Makefile.am (HTML_IMAGES): Add visual index images.

Mon Aug 23 16:56:15 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/Makefile.am: add images to the doc build.

2004-08-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtkfilechooserbutton.sgml: 
	* gtk/gtk-sections.txt: 
	* gtk/gtk-docs.sgml: Add section for GtkFileChooserButton.

Mon Aug 16 01:44:30 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-sections.txt: Updates.

Thu Aug 12 00:00:12 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtkuimanager.sgml: Add some information about
	allowed values for the name and action attributes.

Wed Aug 11 23:13:02 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-sections.txt: Add new GtkAction setters.

2004-08-11  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf/Makefile.am (IGNORE_HFILES): Add gdk-pixbuf-alias.h

Tue Aug 10 18:58:15 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk/Makefile.am (IGNORE_HFILES): Add gdkalias.h
	
	* gtk/Makefile.am (IGNORE_HFILES): Add gtkalias.h.

Mon Aug  9 10:52:23 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-sections.txt: Add gtk_entry_layout_index_to_text_index() 
	and its inverse. 

2004-08-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtkrc.sgml: Fix a typo (#164470, Mariano 
	Suarez-Alvarez)

2004-08-06  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdk-sections.txt: Add gdk_drag_drop_succeeded.

2004-08-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add gtk_file_chooser_[sg]et_show_hidden.

2004-08-02  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add hover-expand setter and getter.

2004-08-01  Matthias Clasen  <mclasen@redhat.com>
                                                                                
        * === Released 2.5.1 ===
                                                                                
Sat Jul 31 17:20:22 2004  Matthias Clasen  <maclas@gmx.de>
